RESOLVED FIXED291957
ImageCapture.grabFrame should not wait for canvas change
https://bugs.webkit.org/show_bug.cgi?id=291957
Summary ImageCapture.grabFrame should not wait for canvas change
youenn fablet
Reported 2025-04-23 07:47:17 PDT
ImageCapture.grabFrame should not wait for canvas change
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-23 07:47:31 PDT
youenn fablet
Comment 2 2025-04-23 10:46:18 PDT
EWS
Comment 3 2025-04-30 00:17:14 PDT
Committed 294322@main (b9174b433c1d): <https://commits.webkit.org/294322@main> Reviewed commits have been landed. Closing PR #44425 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.